acceptance tests now adapt to application locale setting
- i.e. there is no need to fix the tests when different locales for 1st domain and/or administration are used
- proper translations and formatting are used thanks to the new LocalizationHelper
- see https://github.com/shopsys/shopsys/pull/1425

--- a/src/Shopsys/ShopBundle/Resources/config/services_test.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services_test.yml
@@ -13,6 +13,9 @@ services:
 
     Shopsys\FrameworkBundle\Model\Localization\IntlCurrencyRepository: ~
 
+    CommerceGuys\Intl\Currency\CurrencyRepositoryInterface:
+        class: Shopsys\FrameworkBundle\Model\Localization\IntlCurrencyRepository
+
     Shopsys\FrameworkBundle\Component\EntityExtension\EntityNameResolver:
         class: Tests\ShopBundle\Functional\EntityExtension\OverwritableEntityNameResolver
         arguments:
@@ -182,3 +185,15 @@ services:
     Shopsys\ShopBundle\Model\Feed\FeedHelper: ~
 
     Shopsys\ReadModelBundle\Product\Listed\ListedProductViewFacadeInterface: '@Shopsys\ShopBundle\Model\Product\View\ListedProductViewElasticFacade'
+
+    Shopsys\FrameworkBundle\Model\Localization\Localization:
+        arguments:
+            $adminLocale: '%shopsys.admin_locale%'
+
+    Shopsys\FrameworkBundle\Component\Router\DomainRouterFactory:
+        arguments: ['%router.resource%']
+
+    Shopsys\FrameworkBundle\Component\CurrencyFormatter\CurrencyFormatterFactory: ~
+
+    Shopsys\FrameworkBundle\Twig\NumberFormatterExtension: '@Shopsys\ShopBundle\Twig\NumberFormatterExtension'
+
