--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "arvenil/ninja-mutex": "0.6.0 as 0.4.1",
         "bmatzner/jquery-bundle": "^2.2.2",
         "bmatzner/jquery-ui-bundle": "^1.10.3",
-        "commerceguys/intl": "0.7.4",
+        "commerceguys/intl": "^1.0.0",
         "composer/composer": "^1.6.0",
         "craue/formflow-bundle": "^3.0.3",
         "doctrine/annotations": "^1.6.0",
@@ -69,16 +69,16 @@
         "sensio/framework-extra-bundle": "^3.0.29",
         "sensio/generator-bundle": "^3.1.7",
         "shopsys/doctrine-orm": "^2.6.2",
-        "shopsys/google-cloud-bundle": "7.3.x-dev",
+        "shopsys/google-cloud-bundle": "8.0.0",
         "shopsys/postgres-search-bundle": "^0.1",
-        "shopsys/migrations": "7.3.x-dev",
-        "shopsys/form-types-bundle": "7.3.x-dev",
-        "shopsys/framework": "7.3.x-dev",
-        "shopsys/plugin-interface": "7.3.x-dev",
-        "shopsys/product-feed-heureka": "7.3.x-dev",
-        "shopsys/product-feed-heureka-delivery": "7.3.x-dev",
-        "shopsys/product-feed-zbozi": "7.3.x-dev",
-        "shopsys/product-feed-google": "7.3.x-dev",
+        "shopsys/migrations": "8.0.0",
+        "shopsys/form-types-bundle": "8.0.0",
+        "shopsys/framework": "8.0.0",
+        "shopsys/plugin-interface": "8.0.0",
+        "shopsys/product-feed-heureka": "8.0.0",
+        "shopsys/product-feed-heureka-delivery": "8.0.0",
+        "shopsys/product-feed-zbozi": "8.0.0",
+        "shopsys/product-feed-google": "8.0.0",
         "snc/redis-bundle": "^2.1.8",
         "stof/doctrine-extensions-bundle": "^1.3.0",
         "symfony/assetic-bundle": "^2.8.2",
@@ -110,8 +110,8 @@
         "codeception/codeception": "^2.4.0",
         "phpstan/phpstan": "^0.11",
         "phpunit/phpunit": "^7.0",
-        "shopsys/coding-standards": "7.3.x-dev",
-        "shopsys/http-smoke-testing": "7.3.x-dev",
+        "shopsys/coding-standards": "8.0.0",
+        "shopsys/http-smoke-testing": "8.0.0",
         "phpstan/phpstan-doctrine": "^0.11.2",
         "phpstan/phpstan-phpunit": "^0.11.2"
     },
