IvoryCKEditorBundle replaced with FOSCKEditorBundle
- see https://github.com/shopsys/shopsys/pull/1072

--- a/src/Shopsys/ShopBundle/Resources/config/forms.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/forms.yml
@@ -77,7 +77,7 @@ services:
     Shopsys\FrameworkBundle\Form\WysiwygTypeExtension:
         class: Shopsys\ShopBundle\Form\WysiwygTypeExtension
         tags:
-            - { name: form.type_extension, extended_type: Ivory\CKEditorBundle\Form\Type\CKEditorType }
+            - { name: form.type_extension, extended_type: FOS\CKEditorBundle\Form\Type\CKEditorType }
 
     Shopsys\ShopBundle\Form\Admin\CountryFormTypeExtension:
         tags:
