--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
         "doctrine/doctrine-bundle": "^1.8.1",
         "doctrine/doctrine-fixtures-bundle": "^3.0.2",
         "doctrine/doctrine-migrations-bundle": "^1.3.0",
-        "egeloen/ckeditor-bundle": "^4.0.6",
+        "friendsofsymfony/ckeditor-bundle": "^2.1",
         "fp/jsformvalidator-bundle": "^1.5.1",
         "fzaninotto/faker": "^1.7.1",
         "helios-ag/fm-elfinder-bundle": "^9.2",
