swiftmailer.transport.real servcie is now defined explicitly in services.yml
- this service is required by \Shopsys\FrameworkBundle\Model\Mail\Mailer class
- the service does not exist when mailing spooling is not enabled (see https://stackoverflow.com/questions/21074756/symfony2-monolog-to-email-errors-why-swiftmailer-transport-real-is-non-existent)
- mail spooling was disbaled in 4276d9077464c8cd7d14ada732e641af6a79ad4a

--- a/src/Shopsys/ShopBundle/Resources/config/services.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services.yml
@@ -641,3 +641,7 @@ services:
     Shopsys\ShopBundle\Controller\Front\ErrorController:
         arguments:
             $environment: '%kernel.environment%'
+
+    swiftmailer.transport.real:
+        class: Swift_SmtpTransport
+        arguments: ['%mailer_host%']
