introduction of read-model layer for FE product lists
- see https://github.com/shopsys/shopsys/pull/1018
- the data for lists are taken from Elasticsearch (seehttps://github.com/shopsys/shopsys/pull/1096)
	- list by category
	- search results
	- accessories in "after-add-to-cart" window (currently disabled module)
- added "main_variant_group_products" field to Elasticsearch index and to ListedProductView
	- represented by new read-model object - MainVaraintGroupProductView
	- thanks to that, there is no need to pass "productsIndexedByMainVariantGroup" to productListMacro anymore
- added "second_distinguishing_parameter_values" to Elasticsearch index and to ListedProductView
	- thanks to that, there is no need to pass "variantsIndexedByMainVariantId" to productListMacro anymore
- ImageExtension now need to extend read-model/ImageExtension that extends framework/ImageExtension (the original one)
- added CartController::productActionAction() even though it is not used at the moment (we will need it in the future on B2CCC project)
- added sk translations to AvailabilityDataFixture to prevent tests from failing
- definitions of twig extensions removed from services.yml - they are auodiscovered and autoconfigured thanks to services/twig.yml setting
- ProductOnCurrentDomainElasticFacade::getSearchAutocompleteProducts is copy-pasted from the parent and must not use parent's getPaginatedProductsForSearch() anymore
	- autocomplete.html.twig expects array of Products and getPaginatedProductsForSearch() now returns array with data from Elasticsearch
	- there is no read-model object for representing autocomplete results and we do not need it here at the moment (however, it could be nice to have it for performance boost)
- services.yml: removed definition of framework/ProductSearchExportRepository as the class does not exist anymore (it was renamed to ProductSearchExportWithFilterRepository)

--- a/src/Shopsys/ShopBundle/Resources/config/services.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services.yml
@@ -213,9 +213,6 @@ services:
 
     Shopsys\FrameworkBundle\Model\Product\ProductOnCurrentDomainFacadeInterface: '@Shopsys\ShopBundle\Model\Product\ProductOnCurrentDomainElasticFacade'
 
-
-    Shopsys\FrameworkBundle\Model\Product\Search\Export\ProductSearchExportRepository: '@Shopsys\FrameworkBundle\Model\Product\Search\Export\ProductSearchExportWithFilterRepository'
-
     Shopsys\FrameworkBundle\Model\Product\Brand\BrandDataFactoryInterface: '@Shopsys\ShopBundle\Model\Product\Brand\BrandDataFactory'
 
     Shopsys\FrameworkBundle\Model\Product\Brand\BrandFacade: '@Shopsys\ShopBundle\Model\Product\Brand\BrandFacade'
@@ -361,10 +358,6 @@ services:
 
     Shopsys\FrameworkBundle\Model\Category\CategoryFacade: '@Shopsys\ShopBundle\Model\Category\CategoryFacade'
 
-    Shopsys\ShopBundle\Twig\BushmanClubPointsExtension:
-        tags:
-            - { name: twig.extension }
-
     Shopsys\ShopBundle\Model\BushmanClub\CurrentBushmanClubPointPeriods: ~
 
     Shopsys\FrameworkBundle\Controller\Admin\CustomerController:
@@ -398,10 +391,6 @@ services:
     Shopsys\ShopBundle\Component\Instagram\Instagram:
         arguments:
             - '%instagram%'
-
-    Shopsys\ShopBundle\Twig\InstagramExtension:
-        tags:
-            - { name: twig.extension }
 
     shopsys.shop.twig.cache_provider:
         class: Doctrine\Common\Cache\RedisCache
@@ -501,14 +490,6 @@ services:
 
     Shopsys\ShopBundle\Component\Setting\Setting: ~
     Shopsys\FrameworkBundle\Component\Setting\Setting: '@Shopsys\ShopBundle\Component\Setting\Setting'
-
-    Shopsys\ShopBundle\Twig\DeliveryDateExtension:
-        tags:
-            - { name: twig.extension }
-
-    Shopsys\ShopBundle\Twig\FriendlyDateTimeFormatterExtension:
-        tags:
-            - { name: twig.extension }
 
     Shopsys\FrameworkBundle\Model\Pricing\Group\PricingGroupRepository: '@Shopsys\ShopBundle\Model\Pricing\Group\PricingGroupRepository'
 
@@ -645,3 +626,11 @@ services:
     swiftmailer.transport.real:
         class: Swift_SmtpTransport
         arguments: ['%mailer_host%']
+
+    Shopsys\ShopBundle\Model\Product\Search\ProductElasticsearchConverter: ~
+
+    Shopsys\FrameworkBundle\Model\Product\Search\ProductElasticsearchConverter: '@Shopsys\ShopBundle\Model\Product\Search\ProductElasticsearchConverter'
+
+    Shopsys\ReadModelBundle\Product\Listed\ListedProductViewFactory: '@Shopsys\ShopBundle\Model\Product\View\ListedProductViewFactory'
+
+    Shopsys\ReadModelBundle\Product\Listed\ListedProductViewFacadeInterface: '@Shopsys\ShopBundle\Model\Product\View\ListedProductViewElasticFacade'
