--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,7 @@
         "shopsys/product-feed-heureka-delivery": "8.0.0",
         "shopsys/product-feed-zbozi": "8.0.0",
         "shopsys/product-feed-google": "8.0.0",
+        "shopsys/read-model": "8.0.0",
         "snc/redis-bundle": "^2.1.8",
         "stof/doctrine-extensions-bundle": "^1.3.0",
         "symfony/assetic-bundle": "^2.8.2",
