all horizontal product lists use read-model objects (ListedProductView) instead of Product entities
- i.e. productList.horizontalList() macro now works with ListedProductView objects
- best selling products - postgres is queried only once, then the ids are stored in cache, and product data are now fecthed from Elasticsearch
- last visited products - data are now fetched from Elasticsearch
- top products on homepage and in cart - data are still fetched from postgres (but then transferred to ListedProductViews)
- accessories on product detail - data are still fetched from postgres (but then transferred to ListedProductViews)
- added "main_variant_id" field to Elasticsearch index to ensure proper rendering of product images
	- Product::getProductForCreatingImageAccordingToVariant() was originally used in productList.horizontalList() macro

--- a/src/Shopsys/ShopBundle/Resources/config/services.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services.yml
@@ -634,3 +634,9 @@ services:
     Shopsys\ReadModelBundle\Product\Listed\ListedProductViewFactory: '@Shopsys\ShopBundle\Model\Product\View\ListedProductViewFactory'
 
     Shopsys\ReadModelBundle\Product\Listed\ListedProductViewFacadeInterface: '@Shopsys\ShopBundle\Model\Product\View\ListedProductViewElasticFacade'
+
+    Shopsys\FrameworkBundle\Model\Product\BestsellingProduct\CachedBestsellingProductFacade: '@Shopsys\ShopBundle\Model\Product\BestsellingProduct\CachedBestsellingProductFacade'
+
+    Shopsys\ShopBundle\Model\Product\BestsellingProduct\CachedBestsellingProductFacade:
+        arguments:
+            - '@shopsys.shop.product.bestselling_product.cache_provider'
