--- a/src/Shopsys/ShopBundle/Resources/config/services.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services.yml
@@ -314,6 +314,7 @@ services:
         arguments:
             - '%payPalClientId%'
             - '%payPalClientSecret%'
+            - '%payPalMode%'
 
     Shopsys\FrameworkBundle\Model\Product\ProductCachedAttributesFacade:
         class: Shopsys\ShopBundle\Model\Product\ProductCachedAttributesFacade
