--- a/composer.json
+++ b/composer.json
@@ -69,21 +69,21 @@
         "sensio/framework-extra-bundle": "^3.0.29",
         "sensio/generator-bundle": "^3.1.7",
         "shopsys/doctrine-orm": "^2.6.2",
-        "shopsys/google-cloud-bundle": "8.0.0",
+        "shopsys/google-cloud-bundle": "8.0.x-dev",
         "shopsys/postgres-search-bundle": "^0.1",
-        "shopsys/migrations": "8.0.0",
-        "shopsys/form-types-bundle": "8.0.0",
-        "shopsys/framework": "8.0.0",
-        "shopsys/plugin-interface": "8.0.0",
-        "shopsys/product-feed-heureka": "8.0.0",
-        "shopsys/product-feed-heureka-delivery": "8.0.0",
-        "shopsys/product-feed-zbozi": "8.0.0",
-        "shopsys/product-feed-google": "8.0.0",
-        "shopsys/read-model": "8.0.0",
+        "shopsys/migrations": "8.0.x-dev",
+        "shopsys/form-types-bundle": "8.0.x-dev",
+        "shopsys/framework": "8.0.x-dev",
+        "shopsys/plugin-interface": "8.0.x-dev",
+        "shopsys/product-feed-heureka": "8.0.x-dev",
+        "shopsys/product-feed-heureka-delivery": "8.0.x-dev",
+        "shopsys/product-feed-zbozi": "8.0.x-dev",
+        "shopsys/product-feed-google": "8.0.x-dev",
+        "shopsys/read-model": "8.0.x-dev",
         "snc/redis-bundle": "^2.1.8",
         "stof/doctrine-extensions-bundle": "^1.3.0",
         "symfony/assetic-bundle": "^2.8.2",
-        "symfony/monolog-bundle": "^3.1.2",
+        "symfony/monolog-bundle": "~3.4.0",
         "symfony/swiftmailer-bundle": "^3.2.2",
         "symfony/symfony": "^3.4.8",
         "symfony-cmf/routing": "^2.0.3",
@@ -111,8 +111,8 @@
         "codeception/codeception": "^2.4.0",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^7.0",
-        "shopsys/coding-standards": "8.0.0",
-        "shopsys/http-smoke-testing": "8.0.0",
+        "shopsys/coding-standards": "8.0.x-dev",
+        "shopsys/http-smoke-testing": "8.0.x-dev",
         "phpstan/phpstan-doctrine": "^0.12",
         "phpstan/phpstan-phpunit": "^0.12"
     },
