[BG-6588] GoPay - fix hiding if payment is already hidden.
- If is payment already hidden it doesnt allow to unhide payment automatically

Use case:
1. Payment is hidden
2. GoPay hide payment
3. GoPay unhide payment
4. Payment is not unhidden because it was hidden by admin before hiding by GoPay

--- a/src/Shopsys/ShopBundle/Resources/config/services.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services.yml
@@ -646,3 +646,5 @@ services:
     Shopsys\ShopBundle\Controller\Front\ErrorController:
         arguments:
             $environment: '%kernel.environment%'
+
+    Shopsys\FrameworkBundle\Model\Payment\IndependentPaymentVisibilityCalculation: '@Shopsys\ShopBundle\Model\Payment\IndependentPaymentVisibilityCalculation'
