parametrize variables in kubernetes configuration
- see https://github.com/shopsys/shopsys/pull/1384

--- a/kubernetes/deployments/webserver-php-fpm.yml
+++ b/kubernetes/deployments/webserver-php-fpm.yml
@@ -26,6 +26,9 @@ spec:
                         - "webserver-php-fpm"
                         - "php-fpm"
                         - "webserver"
+                        - "{{DOMAIN_HOSTNAME_1}}"
+                        - "{{DOMAIN_HOSTNAME_2}}"
+                        - "{{DOMAIN_HOSTNAME_3}}"
             volumes:
                 -   name: source-codes
                     emptyDir: {}
@@ -46,7 +49,7 @@ spec:
                         name: nginx-default-config
             initContainers:
                 -   name: copy-source-codes-to-volume
-                    image: ~
+                    image: "{{DOCKER_PHP_FPM_IMAGE}}"
                     securityContext:
                         runAsUser: 33
                     command: ["sh", "-c", "cp -r /var/www/html/. /tmp/source-codes"]
@@ -54,10 +57,10 @@ spec:
                         -   name: source-codes
                             mountPath: /tmp/source-codes
                         -   name: domains-urls
-                            mountPath: /var/www/html/app/config/domains_urls.yml
+                            mountPath: "{{PATH_CONFIG_DIRECTORY}}/domains_urls.yml"
                             subPath: domains_urls.yml
                         -   name: parameters
-                            mountPath: /var/www/html/app/config/parameters.yml
+                            mountPath: "{{PATH_CONFIG_DIRECTORY}}/parameters.yml"
                             subPath: parameters.yml
             containers:
                 -   image: ~
@@ -74,10 +77,10 @@ spec:
                         -   name: source-codes
                             mountPath: /var/www/html
                         -   name: domains-urls
-                            mountPath: /var/www/html/app/config/domains_urls.yml
+                            mountPath: "{{PATH_CONFIG_DIRECTORY}}/domains_urls.yml"
                             subPath: domains_urls.yml
                         -   name: parameters
-                            mountPath: /var/www/html/app/config/parameters.yml
+                            mountPath: "{{PATH_CONFIG_DIRECTORY}}/parameters.yml"
                             subPath: parameters.yml
                     env:
                         -   name: S3_API_HOST
