--- a/src/Shopsys/ShopBundle/Resources/config/services.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services.yml
@@ -51,6 +51,8 @@ services:
 
     Shopsys\FrameworkBundle\Controller\Admin\PromoCodeController:
         class: Shopsys\ShopBundle\Controller\Admin\PromoCodeController
+        arguments:
+            $useInlineEditation: false
 
     Faker\Generator:
         factory: [Faker\Factory, create, ]
