--- a/src/Shopsys/ShopBundle/Resources/config/services.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services.yml
@@ -582,7 +582,7 @@ services:
 
     Shopsys\ShopBundle\Model\AdvancedSearch\Filter\ProductFlagFilter: ~
 
-    Shopsys\FrameworkBundle\Model\Model\AdvancedSearch\Filter\ProductFlagFilter: '@Shopsys\ShopBundle\Model\Model\AdvancedSearch\Filter\ProductFlagFilter'
+    Shopsys\FrameworkBundle\Model\AdvancedSearch\Filter\ProductFlagFilter: '@Shopsys\ShopBundle\Model\AdvancedSearch\Filter\ProductFlagFilter'
 
     Shopsys\FrameworkBundle\Model\Category\CategoryWithLazyLoadedVisibleChildrenFactory: '@Shopsys\ShopBundle\Model\Category\CategoryWithLazyLoadedVisibleChildrenFactory'
 
