extended ExtendedClassesAnnotationsCommand to avoid problem with IdentifierNotFound exception
- see https://github.com/shopsys/shopsys/issues/1612

--- a/src/Shopsys/ShopBundle/Resources/config/services/commands.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services/commands.yml
@@ -15,3 +15,14 @@ services:
     Shopsys\ShopBundle\Command\MaintenanceModeCommand:
         arguments:
             - '@shopsys.shop.maintenance_cache_provider'
+
+    Shopsys\ShopBundle\Command\ExtendedClassesAnnotationsCommand:
+        arguments:
+            - '%shopsys.root_dir%'
+
+    Shopsys\FrameworkBundle\Command\ExtendedClassesAnnotationsCommand: '@Shopsys\ShopBundle\Command\ExtendedClassesAnnotationsCommand'
+
+    Shopsys\FrameworkBundle\Component\ClassExtension\ClassExtensionRegistry:
+        arguments:
+            - '%shopsys.entity_extension.map%'
+            - '%shopsys.framework.root_dir%'
