--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
     <property name="path.vendor" value="${path.root}/vendor"/>
     <property name="path.framework" value="${path.vendor}/shopsys/framework"/>
 
-    <property name="phpstan.level" value="1"/>
+    <property name="phpstan.level" value="4"/>
     <property name="check-and-fix-annotations" value="true"/>
 
     <import file="${path.framework}/build.xml"/>
@@ -81,4 +81,20 @@
 
     <target name="clean-all" depends="clean, clean-redis" description="Second part of application build for production preserving your DB (must be run with maintenance page when containing DB migrations)."/>
 
+<!-- phpstan target is overridden to setup higher memory limit. see https://github.com/shopsys/shopsys/issues/1614 -->
+    <target name="phpstan" depends="tests-acceptance-build" description="Performs static analysis of PHP files using PHPStan." hidden="true">
+        <exec executable="${path.phpstan.executable}" logoutput="true" passthru="true" checkreturn="true">
+            <arg value="analyze"/>
+
+            <arg value="-c"/>
+            <arg path="${path.phpstan.config}"/>
+
+            <arg path="${path.src}"/>
+            <arg path="${path.tests}"/>
+
+            <arg value="--level=${phpstan.level}"/>
+            <arg value="--memory-limit=2G"/>
+            <arg value="-vvv"/>
+        </exec>
+    </target>
 </project>
