CronModuleExecutor is now service in DIC
- there is no need to override CronFacade anymore
- see https://github.com/shopsys/shopsys/pull/1314

--- a/src/Shopsys/ShopBundle/Resources/config/services.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services.yml
@@ -69,10 +69,11 @@ services:
             - '%mall_apiKey%'
             - '%mall_isProductionMode%'
 
-    Shopsys\FrameworkBundle\Component\Cron\CronFacade:
-        class: Shopsys\ShopBundle\Component\Cron\CronFacade
+    Shopsys\ShopBundle\Component\Cron\CronModuleExecutor:
         arguments:
-            - '@monolog.logger.cron'
+            $secondsTimeout: 240
+
+    Shopsys\FrameworkBundle\Component\Cron\CronModuleExecutor: '@Shopsys\ShopBundle\Component\Cron\CronModuleExecutor'
 
     Shopsys\ShopBundle\Component\Redis\RedisFacade:
         arguments:
