--- a/app/config/packages/twig.yml
+++ b/app/config/packages/twig.yml
@@ -20,6 +20,7 @@ twig:
         - '@ShopsysShop/Admin/Form/storeStockFields.html.twig'
         - '@ShopsysShop/Admin/Form/blogCategoriesType.html.twig'
         - '@ShopsysShop/Admin/Form/blogCategoryCheckboxType.html.twig'
+        - '@ShopsysShop/Admin/Form/youtubeVideos.html.twig'
     strict_variables: true
     globals:
         globalMultipleFormSetting: '@Shopsys\FrameworkBundle\Component\Form\MultipleFormSetting'
