--- a/app/config/parameters_test.yml.dist
+++ b/app/config/parameters_test.yml.dist
@@ -14,3 +14,4 @@ parameters:
     test_mailer_password: ~
 
     shopsys.content_dir_name: 'content-test'
+    env(ELASTIC_SEARCH_INDEX_PREFIX): 'tests_'
