InputPriceRecalculationSchedulerTest and PriceExtensionTest rewritten so they are now independent from domain and currency settings
- see https://github.com/shopsys/shopsys/pull/1479

--- a/src/Shopsys/ShopBundle/Resources/config/services_test.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services_test.yml
@@ -200,3 +200,13 @@ services:
     Shopsys\FrameworkBundle\Twig\NumberFormatterExtension: '@Shopsys\ShopBundle\Twig\NumberFormatterExtension'
 
     Shopsys\ShopBundle\Model\Product\Parameter\ParameterFacade: ~
+
+    Shopsys\FrameworkBundle\Model\Pricing\Currency\CurrencyDataFactoryInterface:
+        alias: Shopsys\FrameworkBundle\Model\Pricing\Currency\CurrencyDataFactory
+
+    Shopsys\FrameworkBundle\Model\Pricing\Currency\CurrencyFactoryInterface:
+        alias: Shopsys\FrameworkBundle\Model\Pricing\Currency\CurrencyFactory
+
+    Shopsys\ShopBundle\Model\Transport\TransportFacade: ~
+
+    Shopsys\FrameworkBundle\Model\Transport\TransportFacade: '@Shopsys\ShopBundle\Model\Transport\TransportFacade'
