improve working with currency rounding and fraction digits
- admin can now set manage rounding per currency, as well as minimal
fraction digits
- see https://github.com/shopsys/shopsys/pull/1487

--- a/app/config/parameters_common.yml
+++ b/app/config/parameters_common.yml
@@ -47,5 +47,6 @@ parameters:
         Shopsys\FrameworkBundle\Model\Customer\DeliveryAddress: Shopsys\ShopBundle\Model\Customer\DeliveryAddress
         Shopsys\FrameworkBundle\Model\Order\Status\OrderStatus: Shopsys\ShopBundle\Model\Order\Status\OrderStatus
         Shopsys\FrameworkBundle\Model\Country\Country: Shopsys\ShopBundle\Model\Country\Country
+        Shopsys\FrameworkBundle\Model\Pricing\Currency\Currency: Shopsys\ShopBundle\Model\Pricing\Currency\Currency
     build-version: '0000000000000000'
     securityBcryptCost: 12
