--- a/app/config/parameters_common.yml
+++ b/app/config/parameters_common.yml
@@ -21,6 +21,7 @@ parameters:
     shopsys.performance_test.feed.delivery.max_duration_seconds: 20
     shopsys.performance_test.feed.min_duration_seconds: 5
     container.autowiring.strict_mode: true
+    shopsys.image.enable_lazy_load: true
     shopsys.entity_extension.map:
         Shopsys\FrameworkBundle\Model\Advert\Advert: Shopsys\ShopBundle\Model\Advert\Advert
         Shopsys\FrameworkBundle\Model\Article\Article: Shopsys\ShopBundle\Model\Article\Article
