--- a/src/Shopsys/ShopBundle/Resources/config/services_test.yml
+++ b/src/Shopsys/ShopBundle/Resources/config/services_test.yml
@@ -210,3 +210,5 @@ services:
     Shopsys\ShopBundle\Model\Transport\TransportFacade: ~
 
     Shopsys\FrameworkBundle\Model\Transport\TransportFacade: '@Shopsys\ShopBundle\Model\Transport\TransportFacade'
+
+    Shopsys\FrameworkBundle\Component\Image\ImageFacade: '@Shopsys\ShopBundle\Component\Image\ImageFacade'
