--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
         "incenteev/composer-parameter-handler": "^2.1.3",
         "intervention/image": "^2.3.14",
         "jms/translation-bundle": "^1.4.1",
-        "joschi127/doctrine-entity-override-bundle": "^0.5.0",
+        "joschi127/doctrine-entity-override-bundle": "^0.7.0",
         "league/flysystem": "^1.0",
         "mallgroup/mpapi-client": "^3.10",
         "phing/phing": "^2.16.1",
@@ -69,17 +69,17 @@
         "sensio/framework-extra-bundle": "^3.0.29",
         "sensio/generator-bundle": "^3.1.7",
         "shopsys/doctrine-orm": "^2.6.2",
-        "shopsys/google-cloud-bundle": "8.1.1",
+        "shopsys/google-cloud-bundle": "9.0.x-dev",
         "shopsys/postgres-search-bundle": "^0.1",
-        "shopsys/migrations": "8.1.1",
-        "shopsys/form-types-bundle": "8.1.1",
-        "shopsys/framework": "8.1.1",
-        "shopsys/plugin-interface": "8.1.1",
-        "shopsys/product-feed-heureka": "8.1.1",
-        "shopsys/product-feed-heureka-delivery": "8.1.1",
-        "shopsys/product-feed-zbozi": "8.1.1",
-        "shopsys/product-feed-google": "8.1.1",
-        "shopsys/read-model": "8.1.1",
+        "shopsys/migrations": "9.0.x-dev",
+        "shopsys/form-types-bundle": "9.0.x-dev",
+        "shopsys/framework": "9.0.x-dev",
+        "shopsys/plugin-interface": "9.0.x-dev",
+        "shopsys/product-feed-heureka": "9.0.x-dev",
+        "shopsys/product-feed-heureka-delivery": "9.0.x-dev",
+        "shopsys/product-feed-zbozi": "9.0.x-dev",
+        "shopsys/product-feed-google": "9.0.x-dev",
+        "shopsys/read-model": "9.0.x-dev",
         "snc/redis-bundle": "^2.1.8",
         "stof/doctrine-extensions-bundle": "^1.3.0",
         "symfony/assetic-bundle": "^2.8.2",
@@ -110,8 +110,8 @@
         "codeception/codeception": "^2.4.0",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^7.0",
-        "shopsys/coding-standards": "8.1.1",
-        "shopsys/http-smoke-testing": "8.1.1",
+        "shopsys/coding-standards": "9.0.x-dev",
+        "shopsys/http-smoke-testing": "9.0.x-dev",
         "phpstan/phpstan-doctrine": "^0.12",
         "phpstan/phpstan-phpunit": "^0.12",
         "sspooky13/yaml-standards": "^4.2.5"
