--- a/build.xml
+++ b/build.xml
@@ -79,4 +79,7 @@
             <arg value="install"/>
         </exec>
     </target>
+
+    <target name="clean-all" depends="clean, clean-redis" description="Second part of application build for production preserving your DB (must be run with maintenance page when containing DB migrations)."/>
+
 </project>
