--- a/config/parameters_common.yml
+++ b/config/parameters_common.yml
@@ -49,6 +49,7 @@ parameters:
         Shopsys\FrameworkBundle\Model\Order\Status\OrderStatus: App\Model\Order\Status\OrderStatus
         Shopsys\FrameworkBundle\Model\Country\Country: App\Model\Country\Country
         Shopsys\FrameworkBundle\Model\Pricing\Currency\Currency: App\Model\Pricing\Currency\Currency
+        Shopsys\FrameworkBundle\Model\Product\Availability\Availability: App\Model\Product\Availability\Availability
     build-version: '0000000000000000'
     securityBcryptCost: 12
     # All time values are displayed in this timezone (default is PHP timezone)
