--- a/config/routes/shopsys_front.yml
+++ b/config/routes/shopsys_front.yml
@@ -196,3 +196,10 @@ front_login_notice:
     defaults: { _controller: App\Controller\Front\LoginController:noticeAction }
     methods: [POST]
     condition: "request.isXmlHttpRequest()"
+
+front_download_uploaded_file:
+   path: /file/{uploadedFileId}/{uploadedFilename}
+   defaults: { _controller: App\Controller\Front\UploadedFileController:downloadAction }
+   methods: [GET]
+   requirements:
+       uploadedFileId: \d+
