--- a/config/services_test.yml
+++ b/config/services_test.yml
@@ -49,7 +49,7 @@ services:
         arguments:
             - '@shopsys.shop.component.flash_message.sender.front'
 
-    Shopsys\FrameworkBundle\Model\Customer\UserDataFactoryInterface: '@App\Model\Customer\UserDataFactory'
+    Shopsys\FrameworkBundle\Model\Customer\User\CustomerUserDataFactoryInterface: '@App\Model\Customer\User\CustomerUserDataFactory'
 
     Shopsys\FrameworkBundle\Model\Order\OrderDataFactoryInterface: '@App\Model\Order\OrderDataFactory'
 
@@ -97,8 +97,8 @@ services:
 
     Shopsys\FrameworkBundle\Model\Category\CategoryFacade: '@App\Model\Category\CategoryFacade'
 
-    Shopsys\FrameworkBundle\Model\Customer\CustomerDataFactoryInterface:
-        alias: App\Model\Customer\CustomerDataFactory
+    Shopsys\FrameworkBundle\Model\Customer\User\CustomerUserUpdateDataFactoryInterface:
+        alias: App\Model\Customer\User\CustomerUserUpdateDataFactory
 
     Shopsys\FrameworkBundle\Model\Product\ProductFactoryInterface:
         alias: App\Model\Product\ProductFactory
@@ -107,7 +107,7 @@ services:
 
     Shopsys\FrameworkBundle\Model\Order\Item\OrderItemFactoryInterface: '@App\Model\Order\Item\OrderItemFactory'
 
-    App\Model\Customer\CustomerDataFactory: ~
+    App\Model\Customer\User\CustomerUserUpdateDataFactory: ~
 
     Shopsys\FrameworkBundle\Model\Order\Preview\OrderPreviewFactory: '@App\Model\Order\Preview\OrderPreviewFactory'
 
@@ -115,7 +115,7 @@ services:
 
     Shopsys\FrameworkBundle\Model\Product\Pricing\ProductManualInputPriceFacade: '@App\Model\Product\Pricing\ProductManualInputPriceFacade'
 
-    Shopsys\FrameworkBundle\Model\Customer\CustomerFacade: '@App\Model\Customer\CustomerFacade'
+    Shopsys\FrameworkBundle\Model\Customer\User\CustomerUserFacade: '@App\Model\Customer\User\CustomerUserFacade'
 
     Shopsys\FrameworkBundle\Model\Pricing\Group\PricingGroupFacade: '@App\Model\Pricing\Group\PricingGroupFacade'
 
