--- a/config/images.yml
+++ b/config/images.yml
@@ -116,6 +116,12 @@
             height: 460
             crop: true
             occurrence: 'Front-end: Big banner, six position on homepage'
+        -   name: category
+            width: 1180
+            height: 150
+            crop: true
+            occurrence: 'Front-end: Banner for category'
+
 
 -   name: brand
     class: Shopsys\FrameworkBundle\Model\Product\Brand\Brand
