--- a/docker/postgres/postgres.conf
+++ b/docker/postgres/postgres.conf
@@ -5,11 +5,11 @@ max_connections = 100
 
 dynamic_shared_memory_type = posix
 
-log_timezone = 'Europe/Prague'
+log_timezone = 'UTC'
 
 datestyle = 'iso, mdy'
 
-timezone = 'Europe/Prague'
+timezone = 'UTC'
 
 lc_messages = 'en_US.utf8'
 lc_monetary = 'en_US.utf8'
