--- a/config/packages/security.yml
+++ b/config/packages/security.yml
@@ -140,6 +140,7 @@ security:
         - { path: ^/admin/dashboard/$, roles: ROLE_ADMIN }
         - { path: ^/admin/transfer-issues, roles: ROLE_ADMIN }
         - { path: ^/admin/multidomain, roles: ROLE_ADMIN }
+        - { path: ^/admin/contact-form, roles: ROLE_ADMIN }
         - { path: ^/admin/, roles: ROLE_SUPER_ADMIN }
 
         - { path: ^/efconnect, roles: ROLE_ADMIN }
