ImageExtension now properly extends Shopsys\FrameworkBundle\Twig\ImageExtension
- $isLazyLoadEnabled parameter is passed to parent class

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -632,3 +632,5 @@ services:
     App\Model\Product\BestsellingProduct\CachedBestsellingProductFacade:
         arguments:
             - '@shopsys.shop.product.bestselling_product.cache_provider'
+
+    Shopsys\FrameworkBundle\Twig\ImageExtension: '@App\Twig\ImageExtension'
