--- a/config/services.yaml
+++ b/config/services.yaml
@@ -370,7 +370,7 @@ services:
 
     Shopsys\FrameworkBundle\Component\String\HashGenerator: '@App\Component\String\HashGenerator'
 
-    Shopsys\FrameworkBundle\Model\Product\Search\Export\ProductSearchExportWithFilterRepository: '@App\Model\Product\Search\Export\ProductSearchExportWithFilterRepository'
+    Shopsys\FrameworkBundle\Model\Product\Elasticsearch\ProductExportRepository: '@App\Model\Product\Elasticsearch\ProductExportRepository'
 
     Shopsys\FrameworkBundle\Model\Product\Pricing\ProductPriceCalculation: '@App\Model\Product\Pricing\ProductPriceCalculation'
 
