--- a/build.xml
+++ b/build.xml
@@ -12,11 +12,9 @@
 
     <import file="${path.framework}/build.xml"/>
 
-    <target name="checks-ci" depends="db-check-mapping,test-db-demo" description="Checks ORM mapping and runs DB, smoke and acceptance tests.">
-        <phingcall target="tests-functional"/>
-        <phingcall target="tests-smoke"/>
+    <target name="tests-acceptance">
+        <echo level="info" message="Acceptance tests are turned off on this project"/>
     </target>
-    <target name="checks-ci-diff" depends="db-check-mapping,test-db-demo,tests-functional,tests-smoke" description="Checks ORM mapping and runs DB, smoke and acceptance tests."/>
 
     <target name="cron-default" description="Runs default background jobs. Should be executed periodically by system Cron every 5 minutes.">
         <exec executable="${path.php.executable}" passthru="true" checkreturn="true">
