--- a/build.xml
+++ b/build.xml
@@ -32,7 +32,7 @@
         </exec>
     </target>
 
-    <target name="tests" depends="test-db-demo,tests-unit" description="Runs unit, functional and smoke tests. Builds new test database in the process.">
+    <target name="tests" depends="test-db-demo,test-elasticsearch-index-recreate,test-elasticsearch-export,tests-unit" description="Runs unit, functional and smoke tests. Builds new test database in the process.">
         <phingcall target="tests-functional"/>
         <phingcall target="tests-smoke"/>
     </target>
